# share-investment-strategy-model

./: .aiderignore  .clinerules  .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ASX_AImodel.py  AUTHORS.md  BOT_FRAMEWORK_README.md  BOT_QUICKSTART.md  CLOUD_PRICING_COMPARISON.md  CODE_HEADERS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  EXECUTION_LOGIC_ANALYSIS.md  FLYIO_PRICING_ANALYSIS.md  Makefile  PRE_DEPLOYMENT_CHECKLIST.md  README.md  SOUL.md  TWN_AImodel.py  USA_AImodel.py  asx_ai_trading_system_requirements.md  backtest.py  bot_trading_system_requirements.md  buildmodel.py  config.py  fly.toml  infrastructure_comparison.md  koyeb.yaml  main.py  pyproject.toml  requirements.txt  run_bot.py  setup.sh  twn_ai_trading_system_requirements.md  (+2 more)
.devcontainer/: devcontainer.json
.github/workflows/: daily-signals.yml  weekly-retrain.yml
.streamlit/: config.toml
app/bot/: __init__.py
app/bot/api/: __init__.py  admin_routes.py  admin_ui_routes.py  auth_middleware.py  auth_routes.py  cron_routes.py  whitelist_routes.py
app/bot/markets/asx/: config.py  signal_service.py
app/bot/models/: __init__.py  database.py
app/bot/services/: auth_utils.py  notification_service.py  phone_utils.py  portfolio_service.py  session_service.py  signal_engine.py  trading_day_utils.py  verification_service.py
app/bot/shared/: models.py
app/bot/templates/: admin_whitelist.html  auth_modal.html  base.html  config_profiles.html  dashboard.html  job_logs.html  profile_form.html  signals.html
app/frontend/public/: robots.txt
core/: __init__.py  backtest_engine.py  config.py  index_manager.py  model_builder.py  transaction_ledger.py  utils.py
data/ledgers/: .gitkeep
docs/: README.md  USER_SCENARIOS.md
scripts/: init_default_profile.py  init_first_admin.py  init_portfolio.py  validate_deployment.py  view_portfolio.py
specs/admin-authentication/: plan.md  spec.md
specs/trading-constraints-and-ledger/: spec.md
tests/: TEST_CASES.md  test_core.py  test_feature_tour.py  test_integration.py
tests/bot/: test_idempotent_signals.py
ui/: __init__.py  algo_view.py  components.py  sidebar.py  stars_view.py  strategy_view.py
