[project]
name = "asx-bot-trading-system"
version = "1.0.0"
description = "ASX Bot Trading System - Automated Signal Generation & Notification"
authors = [{ name = "Yannick" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-CORS==4.0.0",
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.23",
    "cryptography==41.0.7",
    "yfinance==0.2.33",
    "pandas==2.1.4",
    "numpy==1.26.2",
    "scikit-learn==1.3.2",
    "catboost==1.2.2",
    "prophet==1.1.5",
    "tensorflow==2.15.0",
    "requests==2.31.0",
    "boto3==1.34.12",
    "python-dotenv==1.0.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-flask==1.3.0",
    "pytest-cov==4.1.0",
]

[tool.setuptools]
packages = ["app.bot", "core"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests/bot"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".git",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long (handled by formatter)
