[project]
name = "share-investment-strategy-model"
version = "0.2.0"
description = "AI-Based Stock Investment System (ASX Version)"
authors = [{ name = "Yannick" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "yfinance>=0.2.38",
    "pandas>=2.0.0",
    "pandas_market_calendars>=4.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "prophet>=1.1.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "tensorflow>=2.16.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "tensorflow-macos>=2.16.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "tensorflow-metal>=1.1.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["core", "ui"]

[tool.uv]
managed = true
